add byte-swapping so that this works on BE platforms. the logic is based on the current freebsd driver. fixes PR 42870.